fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
-    font-family: Helvetica Neue, Arial;    
+    font-family: cu;    
     font-size: 18px;
 }
 
@@ -60,7 +60,7 @@ p {
 
 .other-post {
     width: 25%;
-    float: left;
+    float: right;
 }
 
 .author-box {
